--- a/index.html
+++ b/index.html
@@ -3,37 +3,70 @@
 <title> project resume </title>
 </head>
 <body>
-<h1> Resume</h1>
+<h1> Resume  <img src="_DSC0677 copy.jpg" alt="photo" width="200" height="200" align="right">
+</h1>
 <p>
 <h2>Personal Details:</h2>
+
 </p>
-<table border ="1">
-<tr>
-<th>Name</th>
-<th> Date of birth</th>
-<th>Phone number</th>
-<th> Email ID</th>
-<th> Photo</th>
+<p>
+<ul>
+<li>Name:   R Akshayaa Sree </li>
+<li>DOB:    29/04/2006</li>
+<li>Phone number:8088525601 </li>
+<li>Email ID: r.akshayaasree@gmail.com</li>
+</ul>
+<p>
+<h2>Educational Qualification:</h2>
+</p>
+<p>
+<h3>Grade:12th</h3>
+</p>
+<p>
+<h4>Name of the university:Euro school</h4></p>
+<table border="1" cellspacing=3 cellpadding=15>
+<th>Subjects</th>
+<th> Marks</th>
 </tr>
 <tr>
-<td>R Akshayaa Sree</td>
-<td> 29/04/2006</td>
-<td> 80885 25601</td>
-<td> rakshayaasreebtech24@rvu.edu.in</td>
-<td> <img src="_DSC0677 copy.jpg" width="200" height="200"/></td>
+<td>Maths</td>
+<td>89</td>
+</tr>
+<tr>
+<td>Physics</td>
+<td>93</td>
+</tr>
+<tr>
+<td>Chemistry</td>
+<td>93</td>
+</tr>
+<tr>
+<td>Computers</td>
+<td>100</td>
 </tr>
 </table>
 <p>
-<h3>Educational Qualification:</h3>
-</p>
-<table border="1">
-<tr>
-<th>PUC marks card</th>
-<th>10th grade</th>
+<h3>Grade:10th</h3>
+<h4>Name of the university:Euro school</h4>
+<table border="1" cellspacing=3 cellpadding=15 class="center">
+<th>Subjects</th>
+<th> Marks</th>
 </tr>
 <tr>
-<td><img src="WhatsApp Image 2024-10-27 at 6.47.32 PM.jpeg" alt="puc marks card" width="200" height="200"/></td>
-<td><img src="WhatsApp Image 2024-10-27 at 6.47.34 PM.jpeg" alt="10th marks card" width="200" height="200"/></td>
+<td>Maths</td>
+<td>99</td>
+</tr>
+<tr>
+<td>Physics</td>
+<td>89</td>
+</tr>
+<tr>
+<td>Chemistry</td>
+<td>100</td>
+</tr>
+<tr>
+<td>Computers</td>
+<td>100</td>
 </tr>
 </table>
 <h3>Skills and Certificates</h3>
@@ -66,5 +99,5 @@ You can access the link to the certificates here:
 
     <input type="submit" value="Send Resume">
 </form>
-</bo
+</body>
 </html>
